优化加载配置代码逻辑